--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -47,8 +47,8 @@
     <b>Please collect the data below and upload data for area overview.</b>
     </span>
 
-		<button type="button" id="save-btn" onclick="layerUpdate('{{ datafile }}');" style="font-size: 12pt;color: gray;">SAVE</button>
-      <button id="Show_the_Walk_Map">
+		<button type="button" id="save-btn" onclick="layerUpdate('{{ datafile }}');" style="font-size: 12pt;color: blue;">SAVE</button>
+      <button id="Show_the_Walk_Map" style="font-size: 12pt;color: red;">
         <label class="guil-action_button" for="Show_the_Walk_Map"  >
           <a href= {{ mapfile }} >WALKMAP</a>
         </label>
