--- a/static/style.css
+++ b/static/style.css
@@ -27,15 +27,15 @@
 }
 
 .tag-existing {
-  border: 2px solid indigo;
+  border: 2px solid blue;
   background-color: #E0D4F7;
-  color: indigo;
+  color: blue;
 }
 
 .tag-new {
-  border: 2px solid #007BFF;
+  border: 2px solid red;
   background-color: #D6E9FF;
-  color: #004085;
+  color: red;
 }
 
 #streamProcessing {
