--- a/static/style.css
+++ b/static/style.css
@@ -216,6 +216,11 @@ font-size: 1.5em;
     word-wrap: normal; /* ensures the text wraps to the next line if it overflows the container */
 }
 
+.lefted {
+	text-align: left;
+	padding-left : 5px;
+}
+
 .righted {
 	text-align: right;
 	padding-right : 5px;
