--- a/templates/canvasscard1.html
+++ b/templates/canvasscard1.html
@@ -113,16 +113,23 @@
 	        <td class="c0" style="width: 7%;">{{ row['WalkName'] }}</td>
 	        <td class="c1" style="width: 7%;">{{ row['ENOP'] }}</td>
 					<td class="c2" style="width: 7%;text-align: left;">{{ row['ElectorName'] }}</td>
-					{% if row['AddressPrefix'] |string != "nan" and row['AddressNumber'] |string|length  %}
-	           <td class="lefted" style="width: 10%;">{{ row['AddressPrefix'] | replace('nan', '') }}, {{row['AddressNumber'] | int }}</td>
-	        {% else %}
-	          {% if row['AddressNumber'] |string|length %}
-	            <td class="lefted" style="width: 5%;">{{ row['AddressNumber'] |string }}</td>
-	          {% else %}
-	            <td class="lefted" style="width: 5%;">{{ row['AddressPrefix'] }}</td>
-	          {% endif %}
-	        {% endif %}
-	        <td class="righted"style="width: 10%;text-align: left;">{{ row['StreetName'] }}</td>
+					<td class="lefted" style="width: 10%;">
+				  {% set prefix = row['AddressPrefix'] | replace('nan', '') | trim %}
+				  {% set number = row['AddressNumber'] | string | trim %}
+
+				  {%- if prefix and number -%}
+				    {{ prefix }} {{ number }}
+				  {%- elif number -%}
+				    {{ number }}
+				  {%- elif prefix -%}
+				    {{ prefix }}
+				  {%- else -%}
+				    <!-- Optional: fallback text or leave empty -->
+				  {%- endif -%}
+				</td>
+					<td class="righted" style="width: 10%;">
+						{{ row['StreetName'] | replace('_', ' ') | title | trim }}
+					</td>
 	        <td class="righted" style="width: 5%;">{{ row['Postcode'] }}</td>
 					<td class="AV" style="width: 5%;"><span>{{ row['AV'] | replace('nan', '') }}  </span></td>
 
@@ -130,14 +137,15 @@
 					<td class="VI" > <input type="text" style="width: 100%; box-sizing: border-box;" value= "{{ row['VI'] | replace('nan', '') }}" onchange="inputVI(this)" maxlength="2" size="3" name= '{{"example-unique-id-B" ~ row['ENOP']}}' id='{{"example-unique-id-F" ~ row['ENOP']}}' /></td>
 	        <td class="NS" ><input type="text" style="width: 100%; box-sizing: border-box;" value= "{{ row['Notes'] | replace('nan', '') }}" onchange="inputNS(this)" name='{{"example-unique-id-C" ~ row['ENOP']}}' id='{{"example-unique-id-G" ~ row['ENOP']}}' /></td>
 					<td style="width: 15%;">
-					  <input
-					    type="text"
-							style="width: 100%; box-sizing: border-box;"
-					    class="taglist"
-					    data-enop="{{ row['ENOP'] }}"
-					    onkeydown="if (event.key === 'Enter') updateIsTagSetColumnForRow(this)"
-					    value="{{ row['Tags'] | default('') }}"
-					  />
+						{% set tags = row['Tags'] | string | trim %}
+						<input
+						  type="text"
+						  style="width: 100%; box-sizing: border-box;"
+						  class="taglist"
+						  data-enop="{{ row['ENOP'] }}"
+						  onkeydown="if (event.key === 'Enter') updateIsTagSetColumnForRow(this)"
+						  value="{% if tags and tags not in ['[]', 'nan'] %}{{ tags }}{% else %}{% endif %}"
+						/>
 					</td>
 							<td class="istagset" style="width: 100%; box-sizing: border-box;" id="istagset-{{ row['ENOP'] }}">
 					  {% if row['is_tag_set'] %}1{% else %}0{% endif %}
